--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,8 @@
 
 .content {
   width: 100%;
-  padding: calc(70px + 12px) 24px 60px 24px;
+  /* padding: calc(70px + 12px) 24px 60px 24px; */
+  padding: 24px 60px 24px;
 }
 .topbar {
   /* position: fixed; */
